# market-classification-cap

./: .editorconfig  .gitignore  README.md  pyproject.toml  run_collector.py
docs/design/: high_level_design.md
docs/proposal/: final_proposal.md
docs/requirements/: Martin_ProjectRequirementsDocument.md  Martin_ProjectRequirementsDocument_v2.md
notebooks/: validate_bars_report.ipynb
practice/: leet.py
src/data_pipeline/: README.md  __init__.py  app_config.yaml  main.py
src/data_pipeline/analysis/: __init__.py  validate_bars.py
src/data_pipeline/app/: __init__.py  collector.py  reconcile.py
src/data_pipeline/core/: __init__.py  cleaning.py  config.py  context.py  errors.py  paths.py  timeframes.py  utils.py
src/data_pipeline/data/: __init__.py  storage.py  trade_bars.py
src/data_pipeline/services/: __init__.py  exchange.py  market.py  orders.py
src/data_pipeline/ui/: __init__.py  app.py
