[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-classification-cap"
version = "0.1.0"
description = "Market classification and scenario analysis (MSCS capstone)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ccxt>=4.0",
    "pyyaml>=6.0",
    "pandas>=1.3",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
